feature：支持双击选择图片进行比较

--- a/settings.ini
+++ b/settings.ini
@@ -1,7 +1,13 @@
 [settings]
-src_dir=E:\GitHub\ImageCompare\src
-dst_dir=E:\GitHub\ImageCompare\dst
+# 原始文件目录
+src_dir=C:\Users\yuanyuanxiang\Pictures\多厂商兼容方案02.png
+# 目标文件目录
+dst_dir=C:\Users\yuanyuanxiang\Pictures\相机.png
+# 保留(目标图像的大小和原始图不同?)
 pad_w=0
+# 保留(目标图像的大小和原始图不同?)
 pad_h=0
-recursive=1
-timer=1000
+# 是否对目录递归
+recursive=0
+# Scan时的间隔(ms)
+timer=500
